# webapp

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  test-browser-sim.js  test-browser.js  test-login.js
.github/workflows/: deploy.yml
cli/: .env  FLOW.md  package-lock.json  package.json  tsconfig.json
cli/src/: cli.ts  d1.ts  email.ts  gpt.ts  index.ts  types.ts
frontend/: .env.local  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ask/: page.tsx
frontend/app/forum/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/projects/view/: page.tsx
frontend/app/publish/: page.tsx
frontend/app/student/: page.tsx
frontend/app/work/: page.tsx
frontend/components/: ChangePasswordModal.tsx  Footer.tsx  Header.tsx  LoginForm.tsx  StudentDetail.tsx  StudentList.tsx
frontend/lib/: auth.tsx  header-context.tsx  project-context.tsx  student-context.tsx
html/: index.html  index.js  style.css  work.html
migrations/: 20250906212000_init.sql  20250929030833_unnest_arr.sql  20251204031113_more_accounts.sql  20251208024430_token_auth.sql  20251211031017_agent_upgrade.sql  20251214002309_condense.sql  20251214002722_condense_2.sql  20251215144032_notnull.sql  20251221134810_submission.sql  20260131190547_email.sql  20260202101254_forum.sql  20260217230252_projects.sql
server/: build_server.py  poll_builds.py
src/: lib.rs  main.rs
tests/: integration.rs
worker/: README.md  wrangler.toml
worker/.wrangler/cache/: cf.json
worker/.wrangler/state/v3/d1/miniflare-D1DatabaseObject/: metadata.sqlite-shm  metadata.sqlite-wal
worker/migrations/: d1_schema.sql
worker/src/: index.ts
