[package]
name = "webapp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
bcrypt = "0.17.1"
dotenv = "0.15.0"
num-traits = "0.2.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
tracing = "0.1.41"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["macros", "postgres", "runtime-tokio", "time"]

[dependencies.axum-extra]
version = "0.10.1"
default-features = false
features = ["cookie"]
