[package]
name = "webapp"
version = "0.1.0"
edition = "2021"
default-run = "webapp"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
clap = "4.5.48"
dotenv = "0.15.0"
fs_extra = "1.3.0"
num-traits = "0.2.19"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "process"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
tracing = "0.1.41"

[dependencies.lettre]
version = "0.11.19"
default-features = false
features = [
    "tokio1",
    "tokio1-rustls",
    "builder", 
    "ring", 
    "rustls-platform-verifier", 
    "smtp-transport"
]

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["macros", "postgres", "runtime-tokio", "time"]

[dependencies.axum-extra]
version = "0.10.1"
default-features = false
features = ["cookie"]

[dependencies.time]
version = "0.3.44"
default-features = false
features = ["serde"]

[dev-dependencies]
tokio = { version = "1.47.1", features = ["test-util"] }
